# agentic-literature-review

./: .dockerignore  .env.sample  .gitignore  API.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: logging_config.py  main.py  server.py
app/agent/: prompt_instructions.py  query_generator.py  retrieval_agent.py
app/database/: create_tables.py  crud.py  db_config.py  models.py
app/downloader/: download_pdf.py  unpaywall.py
app/pipeline/: embedding_pipeline.py  pdf_ingest_pipeline.py  qdrant_pipeline.py  search_pipeline.py
app/pipeline/embedding/: __init__.py  prepare.py  types.py  vector_utils.py
app/pipeline/ingest/: __init__.py  summaries.py  worker.py
app/pipeline/storage/: qdrant_client.py  qdrant_search.py  qdrant_upsert.py
app/utils/: pdf_extractor.py  s2_client.py
backend/: API.md  Dockerfile
backend/app/: main.py  server.py
backend/app/agent/: groq_client.py  prompt_instructions.py  retrieval_agent.py
backend/app/api/: schemas.py
backend/app/api/routes/: review.py
backend/app/database/: crud.py
backend/app/downloader/: download_pdf.py  unpaywall.py
backend/app/pipeline/: pdf_ingest_pipeline.py  retrieval_pipeline.py  run_artifacts.py  search_pipeline.py
backend/app/utils/: pdf_extractor.py
frontend/: .dockerignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/components/: ResearchForm.vue  ResearchProgress.vue  ReviewMarkdown.vue
frontend/app/composables/: useResearch.ts
frontend/app/utils/: sseParser.ts
utils/: s2_client.py
(+9 files in other folders)
