[project]
name = "agentic-literature-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Heshinth P", email = "heshinth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
