[project]
name = "agentic-literature-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Heshinth P", email = "heshinth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "httpx>=0.28.1",
    "litellm>=1.81.10",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "ratelimit>=2.2.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
]
