[project]
name = "agentic-literature-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Heshinth P", email = "heshinth@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "fastapi[standard]>=0.135.1",
    "fastembed>=0.5.1",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.12.0",
    "ratelimit>=2.2.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
]
